# pnk-basic-semaphore

./: .gitignore  CMakeLists.txt  LICENSE
inc/pnk/: basic_semaphore.h
src/: basic_semaphore.c
tests/: initial_test.c
